--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".activities.WorkerDashboardActivity"
+            android:label="Safana"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.SplashActivity" android:theme="@style/AppTheme.NoActionBar">
