Implement Worker Details Activity Add Default Navigation View Add sort icon Add Dependency - Picasso, Circular Image View Change fragment home to fragment worker details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.SplashActivity" android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activities.SupervisorDashboard"
+            android:label="@string/title_activity_supervisor_dashboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
