1. change the color primary dark in the create new task activity. 2. define new style theme. 3. change the UI of the my tasks recycler view model.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activities.CreateTaskActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/activity_custom"/>
         <activity
             android:name=".activities.WorkerDashboardActivity"
             android:label="Safana"
