add worker profile activity. add onclick listener on nav view header to open the worker profile.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,30 +14,35 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.CreateTaskActivity"
+        <activity
+            android:name=".activities.CompleteWorkerProfileActivity"
             android:theme="@style/activity_custom"/>
+        <activity
+            android:name=".activities.CreateTaskActivity"
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.WorkerDashboardActivity"
             android:label="Safana"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.CreateAllowanceActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleInstance" />
+        <activity
+            android:name=".activities.CreateAllowanceActivity"
+            android:launchMode="singleInstance"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.WorkerProfileActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.NewProjectSelectWorkerActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.NewProjectActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.AddEmployeesActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -45,8 +50,9 @@
             android:name=".activities.SupervisorDashboard"
             android:label="@string/title_activity_supervisor_dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
-                  
-        <activity android:name=".activities.SplashActivity" android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".activities.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
