--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
