Click on nav header shows user profile. Set toolbar on task details. Set Custom theme on activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.TaskDetailsActivity"></activity>
+        <activity android:name=".activities.TaskDetailsActivity"
+            android:theme="@style/activity_custom"/>
         <activity
             android:name=".activities.CompleteWorkerProfileActivity"
             android:theme="@style/activity_custom" />
@@ -28,22 +29,22 @@
         <activity
             android:name=".activities.CreateAllowanceActivity"
             android:launchMode="singleInstance"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.WorkerProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.NewProjectSelectWorkerActivity"
             android:launchMode="singleInstance"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.NewProjectActivity"
             android:launchMode="singleInstance"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.AddEmployeesActivity"
             android:launchMode="singleInstance"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/activity_custom" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
