--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.NewUserActivity"></activity>
+        <activity
+            android:name=".activities.NewUserActivity"
+            android:theme="@style/activity_custom"/>
         <activity
             android:name=".activities.CompleteWorkerProfileActivity"
             android:theme="@style/activity_custom" />
